--- a/dataviz/index.html
+++ b/dataviz/index.html
@@ -1,117 +1,12 @@
 <!--from https://bl.ocks.org/sebg/6f7f1dd55e0c52ce5ee0dac2b2769f4b-->
 <!DOCTYPE html>
 <meta charset="utf-8">
-
-<style>
-
-body {
-  font: 20px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.dot {
-  stroke: #000;
-}
-
-</style>
+<link rel="stylesheet" type="text/css" href="css/sensebreast.css">
 <body>
+
+
+<!-- Call d3.js library from the cloud, easier for versioning -->
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script>
 
-var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = innerWidth - margin.left - margin.right,
-    height = innerHeight - margin.top - margin.bottom;
-
-// this should take the lowest time stamp and the highest time stamp
-// https://javascript.info/date
-var x = d3.scaleTime()
-    .range([0, width])
-    .domain([(d3.timeMinute(Date.parse('2019-05-25-11:20:02'))), (d3.timeMinute(Date.parse('2019-05-25-11:25:02')))]);
-
-var y = d3.scaleLinear()
-    .range([height, 0]);
-
-var color = d3.scaleOrdinal(d3.schemeCategory10);
-
-// https://github.com/pshrmn/notes/blob/master/d3/axes.md
-// https://github.com/d3/d3-time-format
-var xAxis = d3.axisBottom(x);
-xAxis.ticks(10);
-xAxis.tickFormat(d3.timeFormat("%H %M %S %L"));
-xAxis.tickSize(5);
-xAxis.tickValues('2019-05-25-11:20:00', '2019-05-25-11:20:30', '2019-05-25-11:21:00')
-
-console.log(xAxis)
-
-var yAxis = d3.axisLeft(y);
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-d3.json("test.json", function(error, data) {
-  if (error) throw error;
-  console.log(data)
-
-// x-axis
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis)
-    .append("text")
-      .attr("class", "label")
-      //.attr("y", 50)
-      .attr("dx", "-.8em")
-      .attr("dy", ".15em")
-      .attr("transform", "rotate(-65)")
-      .style("text-anchor", "end")
-      .text("Time");
-
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 1000)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Sepal Length (cm)")
-
-  svg.selectAll(".dot")
-      .data(data)
-    .enter().append("circle")
-      .attr("class", "dot")
-      .attr("r", 2)
-      .attr("cx", function(d) { return x(d.meta.datestamp); })
-      .attr("cy", function(d) { return y(d.basic.temperature); })
-      .style("fill", function(d) { return color(d.species); });
-
-  var legend = svg.selectAll(".legend")
-      .data(color.domain())
-    .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-
-  legend.append("rect")
-      .attr("x", width - 18)
-      .attr("width", 18)
-      .attr("height", 18)
-      .style("fill", color);
-
-  legend.append("text")
-      .attr("x", width - 24)
-      .attr("y", 9)
-      .attr("dy", ".35em")
-      .style("text-anchor", "end")
-      .text(function(d) { return d; });
-});
-</script>
+<!-- separate the visualisation into a js file for easier linting -->
+<script src="js/visualisation.js"></script>
