Landed the triple axis *happy dance* ;-)

--- a/dataviz/index.html
+++ b/dataviz/index.html
@@ -10,3 +10,7 @@
 
 <!-- separate the visualisation into a js file for easier linting -->
 <script src="js/visualisation.js"></script>
+
+
+</body>
+</html
